[package]
name = "pnp"
version = "0.1.0"
authors = ["Geordon Worley <vadixidav@gmail.com>"]
edition = "2018"

[dependencies]
cv = { package = "cv-core", version = "0.2.2" }
levenberg-marquardt = "0.2.0"
nalgebra = { version = "0.19.0", default-features = false, features = ["alloc"]}

[dev-dependencies]
p3p = { git = "https://github.com/rust-cv/p3p.git", rev = "consensus" }
approx = "0.3"
rand = { version = "0.7.2", features = ["small_rng"] }
arraymap = "0.1.1"
arrsac = "0.3.0"

